--- a/arability/app/views/layouts/_messages.html.erb
+++ b/arability/app/views/layouts/_messages.html.erb
@@ -10,7 +10,7 @@
           </ul>
         </div>
       <% else %>
-        <%= content_tag :div, msg %>
+        <%= content_tag :div, msg.html_safe %>
       <% end %>
   </div>
 <% end %>
