[Issue #179] [WIP] fixes feedback messages when adding a word

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -46,27 +46,34 @@
 					}	
 				}
 				function add_keyword_with_synonym(){
-    					var synonym_id = $("#synonym_select option:selected").val();
-    					var project_id = $("#project_select option:selected").val();
-    					if(synonym_id != undefined && synonym_id !="" && project_id != undefined && project_id !=""){
-        					$.ajax({
-          						type: "POST",
-          						url: "<%= add_word_inside_project_path %>",
-          						data: {synonym_id: synonym_id, keyword: "<%= @search_keyword %>", project_id: project_id }
-        					}); 
-        					add_showSuccess(project_id);  
-      					}
-      					else{
-      						if(project_id == undefined || project_id =="")
-      							no_project_error();
-      						else
-      							no_synonym_error();
-      					}
-  					}
-  				function add_showSuccess(project_id){
+    				var synonym_id = $("#synonym_select option:selected").val();
+    				var project_id = $("#project_select option:selected").val();
+    				var msg = "batee5";
+    				if(synonym_id != undefined && synonym_id !="" && project_id != undefined && project_id !=""){
+        				var request = $.post("/developers/projects/"+project_id+"/add_word_inside_project.json", {synonym_id: synonym_id, keyword: "<%= @search_keyword %>", project_id: project_id } );
+        				request.done(function (data, status, xhr){
+        					if(data.toString() == "<%= t(:Synonym_changed_successfully) %>" || data.toString() == "<%= t(:successfully_added_word_to_project) %>")
+    							add_showSuccess(project_id, data.toString());
+    						else
+    							add_error(data.toString());
+  						});
+  						request.fail(function (error, _, _){
+    						add_error(error.toString());
+  						});
+      				}
+      				else{
+      					if(project_id == undefined || project_id =="")
+   							no_project_error();
+   						else
+      						no_synonym_error();
+      				}
+  				}
+  				function add_showSuccess(project_id, msg){
   					var link = document.getElementById("go_to_project");
   					link.href = "/developers/projects/"+project_id;
   					link.innerHTML = "<%= t(:to_project) %>";
+  					var text = document.getElementById("add_msg");
+  					text.innerHTML = msg;
  					$("#add_success").css("display", "block");
   					$("#add_success").css("margin-bottom", "2px");
   					$("#add_success").css("position", "fixed");
@@ -74,7 +81,9 @@
   					$("#add_success").css("left", "10%");
   					$("#add_success").css("right", "10%");
 				}
-				function add_error(){
+				function add_error(msg){
+					var text = document.getElementById("fail_msg");
+  					text.innerHTML = msg;
 					$("#failed_add").css("display", "block");
   					$("#failed_add").css("margin-bottom", "2px");
   					$("#failed_add").css("position", "fixed");
@@ -333,11 +342,12 @@
   </div>
   <div class="alert alert-block alert-success" id="add_success" style="display:none;">
 	  <button type="button" class="close" onclick="restore()">×</button>
-	  <p id = "add_msg"><%= t(:successfully_added_word_to_project) %> <a href="" id="go_to_project"></a></p>
+	  <p id = "add_msg" style = "display:inline;"> </p>
+	  <a href="" id="go_to_project"></a>
   </div>
   <div class="alert alert-block alert-error" id="failed_add" style="display:none;">
 	  <button type="button" class="close" onclick="restore()">×</button>
-	  <p><%= t(:failed_to_add_word_to_project) %> </p>
+	  <p id= "fail_msg"> </p>
   </div>
   <div class="alert alert-block alert-error" id="no_project" style="display:none;">
 	  <button type="button" class="close" onclick="restore()">×</button>
