[#198][#199][WIP] finished views and implementation

--- a/arability/app/views/games/_halloffame.html.erb
+++ b/arability/app/views/games/_halloffame.html.erb
@@ -38,17 +38,23 @@
   });
 </script>
 
-<div>
-
-<div id="all" class="btn-group" data-toggle="buttons-radio" style = "padding-top:20px;" align="center">
-  <button id = "1" type="button" class="btn" data-toggle="button" onclick="display(this.id)" style="font-size:20px;">
-    <%= t(:hall_of_fame) %></button>
-  <button id = "2" type="button" class="btn" data-toggle="button" onclick="display(this.id)" style="font-size:20px;">
-    <%= t(:your_facebook_friends) %></button>
-  <button id = "3" type="button" class="btn" data-toggle="button" onclick="display(this.id)" style="font-size:20px;">
-    <%= t(:your_twitter_friends) %></button>
+<div style="display:block">
+  <% if I18n.locale == :en %>
+    <a class="pull-right btn btn-success" style="padding: 5px; margin-right: 12px; margin-top: 28px;" onclick="backToGame()">Back to game</a>
+  <% else %>
+    <a class="pull-left btn btn-success" style="padding: 5px; margin-left: 28px; margin-top: 28px;" onclick="backToGame()">رجوع الى اللعبة</a>
+  <% end %>  
 </div>
-<h1 style="width:100px; margin-left:50px; margin-right:50px;"># <%= Gamer.get_gamer_rank(current_gamer) %></h1>
+
+<div align="center">
+  <div id="all" class="btn-group" data-toggle="buttons-radio" style = "padding-top:20px; padding-bottom:20px; width:500px" align="center">
+    <button id = "1" type="button" class="btn" data-toggle="button" onclick="display(this.id)" style="font-size:20px;">
+      <%= t(:hall_of_fame) %></button>
+    <button id = "2" type="button" class="btn" data-toggle="button" onclick="display(this.id)" style="font-size:20px;">
+      <%= t(:your_facebook_friends) %></button>
+    <button id = "3" type="button" class="btn" data-toggle="button" onclick="display(this.id)" style="font-size:20px;">
+      <%= t(:your_twitter_friends) %></button>
+  </div>
 </div>
 
 <div id="btengana" style = "width:770px; margin:0 auto;" align="center">
@@ -62,7 +68,7 @@
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.order("highest_score DESC").page(params[:page]).per(6) %>
+      <% @gamers = Gamer.order("highest_score DESC").page(params[:page]).per(5) %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
       <tr style="background-color: #DDDDDD">
@@ -72,12 +78,16 @@
         <td><%= rank = Gamer.get_gamer_rank(user) %></td>
         <td><%= user.username %></td>
         <td><%= user.highest_score %></td>
-        <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
+        <% trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
         <td>
-          <% if @Trophies.nil? %>
-          <p><%= t(:no_trophies_won) %></p>
+          <% if trophies.nil? %>
+            <p><%= t(:no_trophies_won) %></p>
           <% else %>
-          <%= @Trophies.trophy_id %>
+            <% trophies = Gamers_Trophy.select("trophy_id").where(gamer_id: user.id).order("trophy_id desc").limit(3) %>
+            <% @tr = Trophy.find_all_by_id(trophies) %>
+            <% @tr.each do |trophy| %>
+              <img alt="trophy" class="border-none" src="/assets/<%= trophy.image_file_name %>" width="25" />
+            <% end %>
           <% end %>
         </td>
       </tr>
@@ -85,7 +95,13 @@
       <% end %>
     </tbody>
   </table>
-  <div align="center"><%= paginate @gamers, remote: true %></div>
+  <div class="pagination">
+    <%= paginate @gamers, remote: true %>
+    <ul><li>
+      <% my_rank = Gamer.get_gamer_rank(current_gamer) %>
+      <a href="/games/fame?page=<%= page = (my_rank/5.0).ceil %>" data-remote="true"><%= t(:your_rank) %></a>
+    </li></ul>
+  </div>
 </div>
 
 <div id = "twitter" style = "width:770px; margin:0 auto; visibility:hidden;" align="center">
@@ -105,11 +121,10 @@
         <td><%= t(:rank) %></td>
         <td><%= t(:name) %></td>
         <td><%= t(:highest_score) %></td>
-        <td><%= t(:trophies) %></td>
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.where(id: common).order("highest_score DESC").page(params[:page]).per(6) %>
+      <% @gamers = Gamer.where(id: common).order("highest_score DESC").page(params[:page]).per(5) %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
       <tr style="background-color: #DDDDDD">
@@ -119,14 +134,6 @@
         <td><%= rank = Gamer.get_twitter_rank(user) %></td>
         <td><%= user.username %></td>
         <td><%= user.highest_score %></td>
-        <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
-        <td>
-          <% if @Trophies.nil? %>
-          <p><%= t(:no_trophies_won) %></p>
-          <% else %>
-          <%= @Trophies.trophy_id %>
-          <% end %>
-        </td>
       </tr>
       <br>
       <% end %>
@@ -155,11 +162,10 @@
         <td><%= t(:rank) %></td>
         <td><%= t(:name) %></td>
         <td><%= t(:highest_score) %></td>
-        <td><%= t(:trophies) %></td>
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.where(id: common).order("highest_score DESC").page(params[:page]).per(6) %>
+      <% @gamers = Gamer.where(id: common).order("highest_score DESC").page(params[:page]).per(5) %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
       <tr style="background-color: #DDDDDD">
@@ -169,14 +175,6 @@
         <td><%= rank = Gamer.get_facebook_rank(user) %></td>
         <td><%= user.username %></td>
         <td><%= user.highest_score %></td>
-        <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
-        <td>
-          <% if @Trophies.nil? %>
-          <p><%= t(:no_trophies_won) %></p>
-          <% else %>
-          <%= @Trophies.trophy_id %>
-          <% end %>
-        </td>
       </tr>
       <br>
       <% end %>
