[Issue #77][Issue #250] Fixed gender value

--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -63,9 +63,9 @@
   <div class="control-group">
       <%= f.label t(:pro_gender), :class => "control-label", id: "project_name"%>
       <% if params[:action] == "new" %>
-        <%= f.select(:gender, (['',[t(:pro_male),"Male"],[t(:pro_female),"Female"]]), {}, { id:"gender" }) %>
+        <%= f.select(:gender, (['',[t(:pro_male),"male"],[t(:pro_female),"female"]]), {}, { id:"gender" }) %>
       <% else %>
-        <%= f.select(:gender, (['',[t(:pro_male),"Male"],[t(:pro_female),"Female"]]),  { prompt: @select_value, selected: @project.gender }, { id:"gender" }) %>
+        <%= f.select(:gender, (['',[t(:pro_male),"male"],[t(:pro_female),"female"]]),  { prompt: @select_value, selected: @project.gender }, { id:"gender" }) %>
       <% end %>
   </div>
   <div class="control-group">
@@ -95,13 +95,13 @@
   <div class="control-group">
     <% if I18n.locale == :en %>
     <div class="controls">
-      <span3><a class="btn pull-right btn-medium" href="/developers/projects" style="margin-right: 20px"> <%= t(:cancel) %> </a></span3>
-      <button class="btn btn-info pull-right btn-medium" type="submit" style="margin-right: 20px"><%= t(:save_project) %></button>
+      <span3><a class="btn pull-right" href="/developers/projects" style="margin-right: 20px"> <%= t(:cancel) %> </a></span3>
+      <button class="btn btn-info pull-right" type="submit" style="margin-right: 20px"><%= t(:save_project) %></button>
     </div>
     <% else %>
     <div class="controls">
-      <span3><a class="btn pull-left btn-large" href="/developers/projects" style="margin-right: 20px"> <%= t(:cancel) %> </a></span3>
-      <button class="btn btn-info pull-left btn-large" type="submit" style="margin-right: 20px; font-size=100"><%= t(:save_project) %></button>
+      <span3><a class="btn pull-left" href="/developers/projects" style="margin-right: 20px"> <%= t(:cancel) %> </a></span3>
+      <button class="btn btn-info pull-left" type="submit" style="margin-right: 20px; font-size=100"><%= t(:save_project) %></button>
     </div>
     <% end %>
 <% end %>
