[Issue #179] [MC] fixes merge conflicts with c1_kareemalirahman_c3s28_addKeywordToProject

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -145,7 +145,7 @@
   });
   
   function fetch_keywords(keyword, callback){
-    $.post("autocomplete_keyword", { keyword_search: keyword, project_id: <%= @project.id %> }, function(data){
+    $.post(<%= @project.id %>+"/autocomplete_keyword", { keyword_search: keyword, project_id: <%= @project.id %> }, function(data){
       length = data[Object.keys(data).length-1];
       data = data.slice(0,-1); 
       for(var i = 0; i < Object.keys(data).length; i++){
