[#198][#199][WIP] added documentation

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -206,6 +206,17 @@ function setButtons(){
     nav_locked = false;
   }
 
+  // Author:
+  //   Mirna Yacout
+  // Description:
+  //   views the hall of fame of all arability gamers showing their last 3 trophies, rank and highest score
+  //   giving the user the option to filter with his facebook or twitter friends and view his rank
+  // Parameters:
+  //   None.
+  // Success:
+  //   view the hall of fame successfully
+  // Failure:
+  //   internet connection
   function hallOfFame(){
     if(nav_locked) {
       return;
