--- a/arability/app/views/projects/share.html.erb
+++ b/arability/app/views/projects/share.html.erb
@@ -18,6 +18,9 @@
           <td>
             <%= dev.email %>
           </td>
+          <td>
+            <%= dev.gamer.username %>
+          </td>
             <td>
             <a href="/developers/projects/remove_developer_from_project?dev_id=<%=dev.id%>&project_id=<%=@project.id%>"><i class="icon-remove"></i></a>
           </td>
