[Issue #372][Finished] changed back button to game button and removed link to game in vote log view

--- a/arability/app/views/games/_profile.html.erb
+++ b/arability/app/views/games/_profile.html.erb
@@ -14,7 +14,7 @@
   <% else %>
     <tr>
       <td></td>
-      <td id = "table-row-vl"> <b class = "coloring"> <%= t(:no_you) %>  </b> <%= t(:no_vote_log) %> <a href="/game"> <%= t(:play_link_log) %> </a></td>
+      <td id = "table-row-vl"> <b class = "coloring"> <%= t(:no_you) %>  </b> <%= t(:no_vote_log) %></td>
       <td></td>
     </tr>
   <% end %>
