[Issue #186][WIP] fixed scenario

--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -92,5 +92,5 @@
 <% end %>
 </div>
 <script type="text/javascript">
-checkboxlimit(form_to_select_words, @words_remaining);
+checkboxlimit(form_to_select_words, <%=@words_remaining%>);
 </script>
