--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -225,7 +225,7 @@ function setButtons(){
       cache = document.getElementById("zone").innerHTML;
     } 
     clear();
-    $.get('/games/showprofile');
+    $.get("/games/showprofile");
   }
 
   function generateGameOverPopUp(){
