--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
     Yamli.yamlify( "suggest_synonym_textbox", { settingsPlacement: "inside" } );
     Yamli.yamlify( "suggest_synonym_textbox_arabic", { settingsPlacement: "inside" } );
   }
-  $("div.alert").animate({opacity: 'toggle'}, 3000);
+   $("div.alert").animate({opacity: '.001'}, 3000);
 </script>
 <!-- YAMLI CODE END -->
 </body>
