--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -28,8 +28,10 @@
                 <% else %>
                   <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 13px;", class: "btn btn-primary arabicfontdrop" %>
                 <% end %>
-                <div style="padding-top:5px; text-align:center; font-style:italic;">
-                  <span><%= t(:or) %></span>
+                <div style="padding-top:5px; text-align:center;">
+                  <b>
+                    <span><%= t(:or) %></span>
+                  </b>
                 </div>
                   <div style="padding:5px; text-align:center;">
                   <span><%= t(:existing_account) %></span>
